--- a/src/app/components/test.component.html
+++ b/src/app/components/test.component.html
@@ -1,62 +1,93 @@
-<div class="container my-4">
-  <div class="modal" id="detail-modal" tabindex="-1" role="document" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-    <app-event-detail></app-event-detail>
-  </div>
-  <div class="card">
-    <div class="card-body">
-      <h3 class="card-title">Test dell'acqua</h3>
-      <div class="card-text">
-        <ngx-datatable class="material expandable ngx-datatable fixed-header fixed-row scroll-vertical selectable single-selection"
-          [rows]="events" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="0" [rowHeight]="'auto'" [selectionType]="'single'"
-          (select)='onSelect($event)'>
-          <ngx-datatable-column name="Data Misura">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.dataMisura | date:'dd/MM/yyyy'}}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Kh">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.test.khmin}} - {{row.test.khmax}}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Gh">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.test.ghmin}} - {{row.test.ghmax}}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Ph">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.test.phmin}} - {{row.test.phmax}}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="NO3">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.test.no3min}} - {{row.test.no3max}}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="NO2">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.test.no2min}} - {{row.test.no2max}}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Ferro">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.test.femin}} - {{row.test.femax}}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Fosfati">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.test.fomin}} - {{row.test.fomax}}
-            </ng-template>
-          </ngx-datatable-column>
+<div class="full-page-container">
 
-          <ngx-datatable-column name="Annotazioni">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.note}}
-            </ng-template>
-          </ngx-datatable-column>
-        </ngx-datatable>
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h2 class="display-4">Test dell'acqua</h2>
+      <p class="lead">Risultati dei test dell'acqua effettuati, fare riferimento alla tabella sotto per maggiori dettagli.</p>
+    </div>
+  </div>
+  <div class="row justify-content-center my-5 mx-2">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-body text-center">
+          <div class="chart-container" *ngIf="demodata[0].data">
+            <canvas [appChartjs]="demodata[0]"></canvas>
+          </div>
+          <div class="chart-container" *ngIf="!demodata[0].data">
+            <span>mancano i dati</span>
+          </div>
+        </div>
       </div>
     </div>
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-body text-center">
+          <div class="chart-container" *ngIf="demodata[1].data">
+            <canvas [appChartjs]="demodata[1]"></canvas>
+          </div>
+          <div class="chart-container" *ngIf="!demodata[1].data">
+            <span>mancano i dati</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container my-5">
+    <button class="btn btn-primary btn-fab fixed-bottom-right" title="Top" (click)="goTop()">
+      <i class="fa fa-arrow-up" aria-hidden="true"></i>
+    </button>
+    <div class="modal" id="detail-modal" tabindex="-1" role="document" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <app-event-detail></app-event-detail>
+    </div>
+    <ngx-datatable class="material expandable ngx-datatable fixed-header fixed-row scroll-vertical selectable single-selection my-4"
+      [rows]="events" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="0" [rowHeight]="'auto'" [selectionType]="'single'"
+      (select)='onSelect($event)'>
+      <ngx-datatable-column name="Data Misura">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.dataMisura | date:'dd/MM/yyyy'}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Kh">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.test.khmin}} - {{row.test.khmax}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Gh">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.test.ghmin}} - {{row.test.ghmax}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Ph">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.test.phmin}} - {{row.test.phmax}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="NO3">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.test.no3min}} - {{row.test.no3max}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="NO2">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.test.no2min}} - {{row.test.no2max}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Ferro">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.test.femin}} - {{row.test.femax}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Fosfati">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.test.fomin}} - {{row.test.fomax}}
+        </ng-template>
+      </ngx-datatable-column>
+
+      <ngx-datatable-column name="Annotazioni">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.note}}
+        </ng-template>
+      </ngx-datatable-column>
+    </ngx-datatable>
   </div>
 </div>
