--- a/src/app/components/home.component.html
+++ b/src/app/components/home.component.html
@@ -4,7 +4,7 @@
     <i class="fa fa-plus"></i>
   </button>
 
-  <div class="modal fade" id="detail-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal" id="detail-modal" tabindex="-1" role="document" aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <app-event-detail></app-event-detail>
   </div>
 
@@ -16,6 +16,7 @@
       <div class="col">
         <div class="card h-100">
           <div class="card-body text-center">
+              <i class="card-title fa fa-eyedropper"></i>
             <h4 class="card-title">Test dell'acqua</h4>
             <p class="card-text">Ultimo test dell'acqua risale al {{dataTest | date }}</p>
             <a class="card-link" routerLinkActive="active" [routerLink]="['/test']">Vai alla pagina</a>
@@ -25,6 +26,7 @@
       <div class="col">
         <div class="card h-100">
           <div class="card-body text-center">
+            <i class="card-title fa fa-leaf"></i>
             <h4 class="card-title">Fertilizzazione</h4>
             <p class="card-text">Ultima fertilizzazione risale al {{dataFerti | date }}</p>
             <a class="card-link" routerLinkActive="active" [routerLink]="['/ferti']">Vai alla pagina</a>
@@ -34,6 +36,7 @@
       <div class="col">
         <div class="card h-100">
           <div class="card-body text-center">
+              <i class="card-title fa fa-wrench"></i>
             <h4 class="card-title">Manutenzione</h4>
             <p class="card-text">Ultima manutenzione risale al {{dataManu | date }}</p>
             <a class="card-link" routerLinkActive="active" [routerLink]="['/manutenzione']">Vai alla pagina</a>
