--- a/src/app/components/maintenance.component.html
+++ b/src/app/components/maintenance.component.html
@@ -1,56 +1,74 @@
-<div class="container my-4">
-  <div class="modal" id="detail-modal" tabindex="-1" role="document" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-    <app-event-detail></app-event-detail>
+<div class="full-page-container">
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h2 class="display-4">Interventi di manutenzione</h2>
+      <p class="lead">Registrazione degli interventi di manutenzione effettuati, fare riferimento alla tabella sotto per maggiori dettagli.</p>
+    </div>
   </div>
-  <div class="card">
-    <div class="card-body">
-      <h3 class="card-title">Interventi di manutenzione</h3>
-      <div class="card-text">
-        <ngx-datatable class="material expandable ngx-datatable fixed-header fixed-row scroll-vertical selectable single-selection"
-          [rows]="events" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="0" [rowHeight]="'auto'" [selectionType]="'single'"
-          (select)='onSelect($event)'>
-          <ngx-datatable-column name="Data Misura">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.dataMisura | date:'dd/MM/yyyy'}}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Cambio acqua">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.manutenzione.acqua}}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Potatura">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.manutenzione.potatura}}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Cambio Lana Filtro">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.manutenzione.filtroLana}}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Pulizia Spugna Filtro">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.manutenzione.filtroSpugna}}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Pulizia Pompa">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.manutenzione.filtroPompa}}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Pulizia Vetro">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.manutenzione.vetro}}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Annotazioni">
-            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.note}}
-            </ng-template>
-          </ngx-datatable-column>
-        </ngx-datatable>
+  <div class="row justify-content-center my-5 mx-2" >
+    <div class="col-md-10 col-sm-12">
+      <div class="card">
+        <div class="card-body text-center">
+          <div class="chart-container" *ngIf="demodata.data">
+            <canvas [appChartjs]="demodata"></canvas>
+          </div>
+          <div class="chart-container" *ngIf="!demodata.data">
+            <span>mancano i dati</span>
+          </div>
+        </div>
       </div>
     </div>
+  </div>
+  <div class="container my-5">
+    <button class="btn btn-primary btn-fab fixed-bottom-right" title="Top" (click)="goTop()">
+      <i class="fa fa-arrow-up" aria-hidden="true"></i>
+    </button>
+    <div class="modal" id="detail-modal" tabindex="-1" role="document" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <app-event-detail></app-event-detail>
+    </div>
+    <ngx-datatable class="material expandable ngx-datatable fixed-header fixed-row scroll-vertical selectable single-selection"
+      [rows]="events" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="0" [rowHeight]="'auto'" [selectionType]="'single'"
+      (select)='onSelect($event)'>
+      <ngx-datatable-column name="Data Misura">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.dataMisura | date:'dd/MM/yyyy'}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Cambio acqua">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.manutenzione.acqua}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Potatura">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.manutenzione.potatura}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Cambio Lana Filtro">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.manutenzione.filtroLana}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Pulizia Spugna Filtro">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.manutenzione.filtroSpugna}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Pulizia Pompa">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.manutenzione.filtroPompa}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Pulizia Vetro">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.manutenzione.vetro}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Annotazioni">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.note}}
+        </ng-template>
+      </ngx-datatable-column>
+    </ngx-datatable>
   </div>
 </div>
