--- a/src/app/components/event-detail.component.html
+++ b/src/app/components/event-detail.component.html
@@ -280,16 +280,16 @@
               <div class="card-body">
 
                 <div class="form-row my-2">
-                  <div class="form-group col-4">
+                    <div class="col-lg-4 col-md-4 col-sm-12 my-2">
                     <label for="event-ferti-k2so4">Solfato di potassio</label>
                     <input class="form-control" name="event-ferti-k2so4" type="number" [(ngModel)]="event.ferti.k2so4" placeholder="K2SO4" />
                   </div>
-                  <div class="form-group col-4">
+                  <div class="col-lg-4 col-md-4 col-sm-12 my-2">
                     <label for="event-ferti-magnesio">Magnesio</label>
                     <input class="form-control" name="event-ferti-magnesio" type="number" [(ngModel)]="event.ferti.magnesio" placeholder="Magnesio"
                     />
                   </div>
-                  <div class="form-group col-4">
+                  <div class="col-lg-4 col-md-4 col-sm-12 my-2">
                     <label for="event-ferti-generico">Generico</label>
                     <input class="form-control" name="event-ferti-generico" type="number" [(ngModel)]="event.ferti.generico" placeholder="Generico"
                     />
@@ -297,15 +297,15 @@
                 </div>
 
                 <div class="form-row my-2">
-                  <div class="form-group col-4">
+                    <div class="col-lg-4 col-md-4 col-sm-12 my-2">
                     <label for="event-ferti-k2no3">Nitrato di potassio</label>
                     <input class="form-control" name="event-ferti-k2no3" type="number" [(ngModel)]="event.ferti.k2no3" placeholder="K2NO3" />
                   </div>
-                  <div class="form-group col-4">
+                  <div class="col-lg-4 col-md-4 col-sm-12 my-2">
                     <label for="event-ferti-ferro">Ferro</label>
                     <input class="form-control" name="event-ferti-ferro" type="number" [(ngModel)]="event.ferti.ferro" placeholder="Ferro" />
                   </div>
-                  <div class="form-group col-4">
+                  <div class="col-lg-4 col-md-4 col-sm-12 my-2">
                     <label for="event-ferti-fosfati">Fosfati</label>
                     <input class="form-control" name="event-ferti-fosfati" type="number" [(ngModel)]="event.ferti.fosfati" placeholder="Fosfati"
                     />
@@ -426,6 +426,17 @@
 
                   </div>
                 </div>
+
+                <div class="form-row my-2">
+                  <div class="form-group row">
+                    <label for="event-manutenzione-batteri" class="col-6 col-form-label">Batteri</label>
+                    <div class="col-4">
+                      <input class="form-control" name="event-manutenzione-batteri" type="number" [(ngModel)]="event.manutenzione.batteri" placeholder="ml"
+                      />
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
