--- a/src/app/components/fertilization.component.html
+++ b/src/app/components/fertilization.component.html
@@ -1,10 +1,11 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h2 class="display-4">Festilizzazione</h2>
+    <h2 class="display-4">Fertilizzazione</h2>
     <p class="lead">Registrazione degli interventi di fertilizzazione alle piante dell'acquario, fare riferimento alla tabella sotto per
       maggiori dettagli.</p>
   </div>
 </div>
+<hr>
 <div class="container-fluid justify-content-center my-5">
   <div class="card-deck">
     <div class="card colored-cards">
@@ -57,6 +58,7 @@
     </div>
   </div>
 </div>
+<hr>
 <div class="row justify-content-center my-5 mx-2">
   <div class="col-lg-8 col-md-10 col-sm-12">
     <div class="card">
@@ -71,6 +73,7 @@
     </div>
   </div>
 </div>
+<hr>
 <div class="container my-5">
   <div class="modal" id="detail-modal" tabindex="-1" role="document" aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <app-event-detail></app-event-detail>
