--- a/src/app/components/fertilization.component.html
+++ b/src/app/components/fertilization.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h2 class="display-4">Fertilizzazione</h2>
-    <p class="lead">Registrazione degli interventi di fertilizzazione alle piante dell'acquario, fare riferimento alla tabella sotto per
+    <p class="lead">Registrazione degli interventi di fertilizzazione, fare riferimento alla tabella sotto per
       maggiori dettagli.</p>
   </div>
 </div>
