refactoring con moduli e laziloading

--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -11,13 +11,13 @@
         <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" [routerLink]="['/test']">Test</a>
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/home/test']">Test</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" [routerLink]="['/ferti']">Fertilizzazione</a>
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/home/ferti']">Fertilizzazione</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" [routerLink]="['/manutenzione']">Manutenzione</a>
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/home/manutenzione']">Manutenzione</a>
       </li>
     </ul>
   </div>
