--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand font-fancy" href="#">
+  <a class="navbar-brand font-fancy" href="">
     <img src="../../../assets/img/couple1.jpg" alt="logo" class="rounded-circle" style="width: 17%"> AquaMI</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
     aria-expanded="false" aria-label="Toggle navigation">
@@ -8,16 +8,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']">Home</a>
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/aquaMI']">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" [routerLink]="['/home/test']">Test</a>
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/aquaMI/test']">Test</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" [routerLink]="['/home/ferti']">Fertilizzazione</a>
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/aquaMI/ferti']">Fertilizzazione</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" [routerLink]="['/home/manutenzione']">Manutenzione</a>
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/aquaMI/manutenzione']">Manutenzione</a>
       </li>
     </ul>
   </div>
