fix(routing) fixed route from homepage to features

--- a/src/app/features/components/home.component.html
+++ b/src/app/features/components/home.component.html
@@ -28,7 +28,7 @@
             <i class="card-title fa fa-eyedropper"></i>
             <h4 class="card-title">Test dell'acqua</h4>
             <p class="card-text">Ultimo test dell'acqua risale al {{dataTest | date }}</p>
-            <a class="card-link" routerLinkActive="active" [routerLink]="['/test']">Vai alla pagina</a>
+            <a class="card-link" routerLinkActive="active" [routerLink]="['test']">Vai alla pagina</a>
           </div>
         </div>
       </div>
@@ -38,7 +38,7 @@
             <i class="card-title fa fa-leaf"></i>
             <h4 class="card-title">Fertilizzazione</h4>
             <p class="card-text">Ultima fertilizzazione risale al {{dataFerti | date }}</p>
-            <a class="card-link" routerLinkActive="active" [routerLink]="['/ferti']">Vai alla pagina</a>
+            <a class="card-link" routerLinkActive="active" [routerLink]="['ferti']">Vai alla pagina</a>
           </div>
         </div>
       </div>
@@ -48,7 +48,7 @@
             <i class="card-title fa fa-wrench"></i>
             <h4 class="card-title">Manutenzione</h4>
             <p class="card-text">Ultima manutenzione risale al {{dataManu | date }}</p>
-            <a class="card-link" routerLinkActive="active" [routerLink]="['/manutenzione']">Vai alla pagina</a>
+            <a class="card-link" routerLinkActive="active" [routerLink]="['manutenzione']">Vai alla pagina</a>
           </div>
         </div>
       </div>
